<resources>
    <string name="app_name">Conan Doyles Portsmouth</string>
    <string name="title_activity_main_menu">Doyles Portsmouth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="info">Info</string>
    <string name="google_api_key">AIzaSyBLFNy6oDxyHLexyxN7ZobCWb_-v9peU8g</string>
    <string name="still">Still Standing: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tags">Tags: </string>

    <string name="testing">Testing...</string>
</resources>
