<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marthakat.sirarthurconandoyleinportsmouth.InfoDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/testing"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/still"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/still"/>

                <CheckBox
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/yes"/>

                <CheckBox
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/no"/>
            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addi"
                android:layout_marginTop="5dp"
                android:text="@string/testing"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:layout_marginTop="10dp"
                android:text="@string/testing"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/testing"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tagg"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/tags"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tag"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/testing"/>
            </TableRow>


            <ViewFlipper
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewflipper"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imVF"/>

            </ViewFlipper>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
